# ti83-z80-assembler

./: .gitignore  README.md
examples/: advanced.asm  hello.asm
js-assembler/: README.md  package.json  z80asm.js
js-assembler/src/: index.js
js-assembler/src/assembler/: Parser.js  Z80Assembler.js
js-assembler/src/directives/: data.js
js-assembler/src/instructions/: arithmetic.js  calls.js  jumps.js  loads.js  opcodes.js
js-assembler/src/ti83plus/: TI8XPGenerator.js  romCalls.js  sysVars.js
js-assembler/src/utils/: parseImmediate.js
rust-assembler/: .editorconfig  .gitignore  Cargo.toml  README.md  check.sh  clippy.toml  rustfmt.toml
rust-assembler/src/: constants.rs  lib.rs  main.rs
rust-assembler/src/assembler/: core.rs  mod.rs  parser.rs
rust-assembler/src/directives/: data.rs  mod.rs
rust-assembler/src/instructions/: arithmetic.rs  bitops.rs  calls.rs  index.rs  io.rs  jumps.rs  loads.rs  mod.rs  opcodes.rs
rust-assembler/src/ti83plus/: generator.rs  mod.rs  rom_calls.rs  sys_vars.rs
rust-assembler/src/utils/: immediate.rs  mod.rs
rust-assembler/tests/: integration.rs
rust-assembler/tests/fixtures/: math.asm
